RESOLVED FIXED187381
[GTK][WPE] REGRESSION(r233239): proxy settings not applied after r233239
https://bugs.webkit.org/show_bug.cgi?id=187381
Summary [GTK][WPE] REGRESSION(r233239): proxy settings not applied after r233239
Carlos Garcia Campos
Reported 2018-07-06 01:57:32 PDT
This is because the static variable for proxy settings was replaced by a NeverDestroyed, but the function is not returning a reference, but a copy. This is causing several unit tests to fail.
Attachments
Patch (1.41 KB, patch)
2018-07-06 01:58 PDT, Carlos Garcia Campos
no flags
Archive of layout-test-results from ews102 for mac-sierra (2.29 MB, application/zip)
2018-07-06 03:03 PDT, EWS Watchlist
no flags
Carlos Garcia Campos
Comment 1 2018-07-06 01:58:31 PDT
EWS Watchlist
Comment 2 2018-07-06 03:03:35 PDT
Comment on attachment 344409 [details] Patch Attachment 344409 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/8454537 New failing tests: media/media-fullscreen-return-to-inline.html
EWS Watchlist
Comment 3 2018-07-06 03:03:37 PDT
Created attachment 344415 [details] Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
Yusuke Suzuki
Comment 4 2018-07-06 03:11:33 PDT
Comment on attachment 344409 [details] Patch r=me, nice!
Adrian Perez
Comment 5 2018-07-06 03:32:10 PDT
Comment on attachment 344409 [details] Patch Wow, good catch \o/
WebKit Commit Bot
Comment 6 2018-07-06 03:38:53 PDT
Comment on attachment 344409 [details] Patch Clearing flags on attachment: 344409 Committed r233575: <https://trac.webkit.org/changeset/233575>
WebKit Commit Bot
Comment 7 2018-07-06 03:38:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.