[GTK][WPE] REGRESSION(r233239): proxy settings not applied after r233239 https://bugs.webkit.org/show_bug.cgi?id=187381

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2018-07-06
Reviewed by Yusuke Suzuki.

This is because the static variable for proxy settings was replaced by a NeverDestroyed, but the function is not
returning a reference, but a copy. This is causing several unit tests to fail.

* platform/network/soup/SoupNetworkSession.cpp:
(WebCore::proxySettings):

Canonical link: https://commits.webkit.org/202646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233575 268f45cc-cd09-0410-ab3c-d52691b4dbfc